2005-01-31  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:
	* src/Global.cs:
	* src/HandleModel.cs:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Remove a couple of unused variables, and fix #165676 -
	always refer to CoverDatabase.CoverSize as a static constant.

2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Pass both /root and /gacdir to gacutil.

2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* README:
	* configure.in:
	* src/AddAlbumWindow.cs:
	* src/Album.cs:
	* src/Item.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Use System.Globalization.SortKey instead of g_utf8_collate_key.

	Remove dependency on GUnicode#.

2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* src/StringUtils.cs:

	Use System.Char.Is*.

2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* src/Database.cs:
	* src/Song.cs:

	Small cleanup: Introduce Database.PackStringArray.

2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	When using the last track hack to determine an album's completeness,
	special case the case where there is only one track: Only mark it as
	an album if the track is at least 10 minutes long.

	Also do "half album" checking in the "last track" case if the 
	last track is at least 8. Otherwise too much junk falls through.

2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/AddWindow.glade:
	* data/glade/PlaylistWindow.glade:

	Horizontal scrollbar policies to never.

2005-01-25  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	0.8.1pre3.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/Database.cs:
	* src/SongDatabase.cs:

	Remove DecodeFunction property.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/db.c: (db_store):
	* libmuine/db.h:
	* src/CoverDatabase.cs:
	* src/Database.cs:
	* src/SongDatabase.cs:

	Don't require an EncodeFunction anymore.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>
